--- a/app/views/ads/index/_listing.html.erb
+++ b/app/views/ads/index/_listing.html.erb
@@ -7,14 +7,19 @@
     <ul class="list">
       <% @ads.each do |ad| %>
         <li> 
-          <div class="date"><%= ad.timestamp %></div><div class="list-image"><%= image_tag ad.logo unless params[:hide_thumbnails] %></div>
-          <div class="list-name"><span class="name"><a href="#"><%= ad.title %></a></span><br/><span class="price"><%= currency(ad.price) %></span></div>
+          <div class="date"><%= ad.timestamp %></div>
+          <div class="list-image"><%= image_tag ad.logo unless params[:hide_thumbnails] %></div>
+          <div class="list-name">
+            <span class="name"><a href="#"><%= ad.title %></a></span><br/>
+            <span class="price"><%= currency(ad.price) %></span>
+          </div>
           <div class="list-detail">
             <% if params[:search][:category_name].blank? %>
               <%= link_to ad.category.name, search_url_with(:category_name => ad.category.name.to_crc32) %>
             <% else %>
               <%= ad.try(:detail, :status) %>
             <% end %>
+            <%= '(C)' if !ad.private %>
             <br/>
             <% if params[:search][:city_region].blank? %>
               <%= ad.city.region %>
